--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,4 @@ version = "v0.1.0"
 [deps]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
-StructuralDDP = "b1843380-676b-11e9-1a07-a51b6a2d0c16"
-
-[compat]
-StructuralDDP = ">= 0.1.0"
+# StructuralDDP = "b1843380-676b-11e9-1a07-a51b6a2d0c16"
